--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,14 @@
 
-spring.datasource.url=jdbc:mysql://localhost:3306/atelierehartes
+spring.datasource.url=jdbc:mysql://localhost:3306/atelierehartes?sessionVariables=sql_mode='NO_ENGINE_SUBSTITUTION'&jdbcCompliantTruncation=false
 spring.datasource.username=dev
 spring.datasource.password=1234
 
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.initialization-mode=ALWAYS
+spring.jpa.generate-ddl=true
+spring.jpa.show-sql= true
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.mvc.pathmatch.matching-strategy=ant-path-matcher
 spring.jpa.open-in-view=true
@@ -16,6 +17,6 @@ spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 
 server.port=3000
 
-STRIPE_SECRET_KEY=API_KEY
+STRIPE_SECRET_KEY=STRIPE SECRET KEY HERE
 
 BASE_URL=http://localhost:8081/
